--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Thế giới của anhhhh</title>
+    <title>Hi chào cậu nhaa <33 </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,6 +33,10 @@
         <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
         <button id="no" type="button" class="btn btn-info btn-lg"></button>
       </div>
+      <div>
+    <p id='bio'>Copyright &#169; <a href='https://www.code.pro.vn/' rel='noopener noreferrer' target='_blank'>Phạm
+							Thế Sơn</a></p>
+</div>
     </div>
     <audio src="./sound/sound.mp3" autoplay></audio>
     <!-- Optional JavaScript -->
