--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div class="rect4"></div>
         <div class="rect5"></div>
       </div>
+      <div>
+    <p id='bio'>Copyright &#169; <a href='https://www.code.pro.vn/' rel='noopener noreferrer' target='_blank'>Phạm
+							Thế Sơn</a></p>
+</div>
   </div>
       <div id="bg"></div>
       <div class="content">
