--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="rect5"></div>
       </div>
       <div>
-    <p id='bio'>Copyright &#169; <a href='https://www.code.pro.vn/' rel='noopener noreferrer' target='_blank'>Phạm
+    <p id='bio'>Copyright &#169; <a href='https://www.code.pro.vn/' rel='noopener noreferrer' target='_white'>Phạm
 							Thế Sơn</a></p>
 </div>
   </div>
