--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 							Thế Sơn</a></p>
 </div>
   </div>
+  <div>
+    <p id='bio'>Copyright &#169; <a href='https://www.code.pro.vn/' rel='noopener noreferrer' target='_blank'>Phạm
+							Thế Sơn</a></p>
+</div>
       <div id="bg"></div>
       <div class="content">
         <header>
