--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="Cache-control" content="no-cache">
-    <link href="https://i.imgur.com/01gikK4.png" rel="icon" type="image/x-icon" class="__web-inspector-hide-shortcut__"> == $0
+    <link href="https://i.imgur.com/01gikK4.png" rel="icon" type="image/x-icon" class="__web-inspector-hide-shortcut__">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
